# def_project

./: .gitignore  pyproject.toml  test.py
account/: admin.py  models.py
apps/account/: admin.py
apps/account/migrations/: 0001_initial.py
apps/api/v1/: urls.py
apps/product/: admin.py  serializers.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py
config/: settings.py  urls.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
